# trimesh

./: .gitignore  AddCell.cpp  CMakeLists.txt  main.cpp  mesh.h
